@@ -14,9 +14,9 @@ Forwarded: no
  
  // Directory service keys
 +const NS_XPCOM_CURRENT_PROCESS_DIR = "XCurProcD";
- const NS_APP_SEARCH_DIR_LIST  = "SrchPluginsDL";
  const NS_APP_DISTRIBUTION_SEARCH_DIR_LIST = "SrchPluginsDistDL";
- const NS_APP_USER_SEARCH_DIR  = "UsrSrchPlugns";
+ const NS_APP_USER_PROFILE_50_DIR = "ProfD";
+ 
 @@ -3405,6 +3406,13 @@
        if (!file.isFile() || file.fileSize == 0 || file.isHidden())
          continue;
